# opengl_test

./: .gitignore  CMakeLists.txt  README.md
include/glad/: glad.h
src/: CMakeLists.txt  glad.c  main.cpp  shader.h
src/shaders/: shader.frag
